# adventure-works-lys

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  Retail Revenue & Supply Chain.lvdash.json  adventure_works (1).py  adventure_works EDA.ipynb  bus_matrix.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
.dbt/: profiles.yml
.github/workflows/: sqlfluff_lint.yml
models/: sources.yml
models/int/: int_address.sql  int_customer.sql  int_employee.sql  int_employee_department.sql  int_order_product.sql  int_person.sql  int_product.sql  int_sales_order_detail.sql  int_sales_order_header.sql  int_sales_order_transaction.sql  int_sales_reason.sql  int_ship_method.sql
models/mart/: dim_address.sql  dim_customer.sql  dim_date.sql  dim_employee.sql  dim_order_product.sql  dim_product.sql  dim_sales_reason.sql  dim_ship_method.sql  fact_order.sql  fact_sales.sql
models/stg/: stg_address.sql  stg_date_table.sql  stg_department.sql  stg_email_address.sql  stg_employee.sql  stg_employee_department_history.sql  stg_employee_pay_history.sql  stg_person.sql  stg_person_phone.sql  stg_product.sql  stg_product_category.sql  stg_product_subcategory.sql  stg_sales_order_detail.sql  stg_sales_order_header.sql  stg_sales_order_header_sales_reason.sql  stg_sales_reason.sql  stg_sales_territory.sql  stg_ship_method.sql  stg_state_province.sql
